test/bad/loops/for19.px

for x in 0...10 step 5, 'a'..'z' step '5' do
    skip
